# Ajou-Parser

./: .env_sample  .gitignore  Cargo.toml  README.md
src/: courser.rs  lib.rs  updater.rs
