[package]
name = "ajou_parser"
version = "1.0.0"
edition = "2021"
authors = ["Seok Won Choi <ikr@kakao.com>"]
description = "Parser for Ajou University"

[[bin]]
name = "courser"
path = "src/courser.rs"

[[bin]]
name = "updater"
path = "src/updater.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
mongodb = "2"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
scraper = "0.16"
futures = "0.3"
chrono = "0.4"
chrono-tz = "0.8"
anyhow = "1.0.70"
tokio-stream = "0.1"
chromiumoxide = { version = "0.5.0", default-features = false, features = ["tokio-runtime", "_fetcher-native-tokio"] }
tracing = "0.1"
dotenv = "0.15.0"
[target.'cfg(not(target_env = "msvc"))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'
incremental = false
overflow-checks = false
